--- a/.i3/config
+++ b/.i3/config
@@ -15,7 +15,7 @@ set $mod Mod4
 # is used in the bar {} block below.
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
-font pango:DejaVu Sans Mono 8
+font pango:DejaVu Sans Mono 8 
 # Before i3 v4.8, we used to recommend this one as the default:
 # font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
 # The font above is very space-efficient, that is, it looks good, sharp and
@@ -27,7 +27,7 @@ font pango:DejaVu Sans Mono 8
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec urxvt 
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -202,7 +202,6 @@ exec --no-startup-id "xscreensaver -no-splash &"
 bindsym $mod+Shift+o exec "xscreensaver-command --lock"
 
 
-
 # network manager
 exec --no-startup-id nm-applet
 
@@ -226,3 +225,14 @@ exec --no-startup-id workrave
 #}
 #bindsym $mod+Pause mode "$mode_system"
 
+# disable i3wm titlebar
+new_window pixel 1 
+
+# class                 border  backgr. text    indicator child_border
+client.focused          #4c7899 #00aa00 #ffffff #2e9ef4   #285577
+client.focused_inactive #333333 #5f676a #ffffff #484e50   #5f676a
+client.unfocused        #333333 #222222 #888888 #292d2e   #222222
+client.urgent           #2f343a #900000 #ffffff #900000   #900000
+client.placeholder      #000000 #0c0c0c #ffffff #000000   #0c0c0c
+
+client.background       #ffffff
