--- a/.i3status.conf
+++ b/.i3status.conf
@@ -22,7 +22,7 @@ order += "load"
 order += "tztime local"
 
 wireless wlan0 {
-        format_up = "W: (%quality at %essid) %ip"
+        format_up = "W: (%quality at %essid,%bitrate,%frequency) %ip"
         format_down = "W: down"
 }
 
