--- a/.i3blocks.conf
+++ b/.i3blocks.conf
@@ -46,13 +46,13 @@ interval=persist
 # The first parameter sets the step (and units to display)
 # The second parameter overrides the mixer selection
 # See the script for details.
-[volume]
-label=VOL
+#[volume]
+#label=VOL
 #label=♪
-instance=Master
+#instance=Master
 #instance=PCM
-interval=once
-signal=10
+#interval=once
+#signal=10
 
 # Memory usage
 #
