--- a/.i3/config
+++ b/.i3/config
@@ -248,12 +248,12 @@ client.background       #ffffff
 # Set the shortcuts and what they do
 set $mode_display Ext Screen (v) VGA ON, (h) HDMI ON, (x) VGA OFF, (y) HDMI OFF
 mode "$mode_display" {
-    #bindsym v exec --no-startup-id xrandr --output VGA1 --auto --right-of LVDS1, mode "default"
-    #bindsym h exec --no-startup-id xrandr --output HDMI1 --auto --right-of LVDS1, mode "default"
-    bindsym v exec --no-startup-id xrandr --output VGA1 --mode 1920x1080 --right-of LVDS1, mode "default"
-    bindsym h exec --no-startup-id xrandr --output HDMI1 --mode 1920x1080  --right-of LVDS1, mode "default"
-    bindsym x exec --no-startup-id xrandr --output VGA1 --auto --off, mode "default"
-    bindsym y exec --no-startup-id xrandr --output HDMI1 --auto --off, mode "default"
+    #bindsym v exec --no-startup-id xrandr --output VGA-1 --auto --right-of LVDS-1, mode "default"
+    #bindsym h exec --no-startup-id xrandr --output HDMI-1 --auto --right-of LVDS-1, mode "default"
+    bindsym v exec --no-startup-id xrandr --output VGA-1 --mode 1920x1080 --right-of LVDS-1, mode "default"
+    bindsym h exec --no-startup-id xrandr --output HDMI-1 --mode 1920x1080  --right-of LVDS-1, mode "default"
+    bindsym x exec --no-startup-id xrandr --output VGA-1 --auto --off, mode "default"
+    bindsym y exec --no-startup-id xrandr --output HDMI-1 --auto --off, mode "default"
 
     # back to normal: Enter or Escape
     bindsym Return mode "default"
@@ -265,5 +265,5 @@ bindsym $mod+x mode "$mode_display"
 
 
 #For QQ
-for_window [instance="QQ.exe"] floating enable
-for_window [instance="QQ.exe"] border none
+for_window [instance="VBoxHeadless"] floating enable
+for_window [instance="VBoxHeadless"] border none
