--- a/.i3/config
+++ b/.i3/config
@@ -156,7 +156,7 @@ bindsym $mod+r mode "resize"
 bar {
 #        status_command i3status | ~/conf/mystatus.sh
         status_command i3blocks
-		position        top
+        position        top
 }
 
 
@@ -214,6 +214,9 @@ exec --no-startup-id workrave
 
 # dropbox
 exec --no-startup-id "~/.dropbox-dist/dropboxd &"
+
+# fcitx
+exec --no-startup-id "fcitx &"
 
 # lock logout suspend ...
 #set $mode_system System (l) lock, (e) logout, (s) suspend, (h) hibernate, (r) reboot, (Shift+s) shutdown
