--- a/.i3/config
+++ b/.i3/config
@@ -191,6 +191,9 @@ bindsym XF86MonBrightnessDown exec xbacklight -dec 20 # decrease screen brightne
 exec --no-startup-id feh --bg-scale ~/Pictures/WALLPAPER/SZE.jpg
 
 
+# Enable touchpad click
+exec xinput set-prop 11 276 1
+
 # Screenshot
 bindsym --release $mod+z exec --no-startup-id  "scrot -s" 
 
