--- a/.i3/config
+++ b/.i3/config
@@ -245,7 +245,7 @@ bindsym $mod+Pause mode "$mode_system"
 new_window pixel 2 
 
 # class                 border  backgr. text    indicator child_border
-client.focused          #00aa00 #00aa00 #ffffff #00aa00   #00aa00
+client.focused          #ff5733 #ff5733 #ffffff #ff5733   #ff5733
 client.focused_inactive #00aa00 #00aa00 #ffffff #484e50   #5f676a
 client.unfocused        #333333 #222222 #888888 #292d2e   #222222
 client.urgent           #2f343a #900000 #ffffff #900000   #900000
